retry on vpn