@@ -32,12 +32,15 @@ public class ExpressVpn implements  VpnFactory{
      //becasue it is 4 characters identify the vpn
      String vpnServer =  randomStringFromSet().substring(0,4);
         try {
-            Process process =  Runtime.getRuntime().exec("expressvpn connect " + vpnServer);
-           // Process process = builder.start();
-             //       Process process = Runtime.getRuntime().exec("expressvpn connect " + vpnServer );
-            printResults(process);
-            process.waitFor(10, TimeUnit.SECONDS);
+            boolean worked =false ;
+            while (!worked) {
 
+                ProcessBuilder builder = new ProcessBuilder("expressvpn connect " + vpnServer);
+                Process process = builder.start();
+                //       Process process = Runtime.getRuntime().exec("expressvpn connect " + vpnServer );
+                printResults(process);
+             worked =    process.waitFor(10, TimeUnit.SECONDS);
+            }
         } catch (IOException | InterruptedException e) {
             e.printStackTrace();
         }
@@ -52,13 +55,18 @@ public class ExpressVpn implements  VpnFactory{
     @Override
     public void stopVPN() {
         try {
-            Process process = Runtime.getRuntime().exec("expressvpn disconnect");
-           // Process process = builder.start();
-            process.waitFor(10, TimeUnit.SECONDS);
-           // Process process = Runtime.getRuntime().exec("expressvpn disconnect");
-            printResults(process);
+           boolean worked =false ;
+           while (!worked) {
+               ProcessBuilder builder = new ProcessBuilder("expressvpn disconnect");
+               Process process = builder.start();
+              worked = process.waitFor(10, TimeUnit.SECONDS);
+               // Process process = Runtime.getRuntime().exec("expressvpn disconnect");
+               printResults(process);
+           }
         } catch (IOException | InterruptedException e) {
             e.printStackTrace();
         }
-    }
+           }
+
 }
+
